[gd_scene load_steps=21 format=2]

[ext_resource path="res://ui/components/ButtonBase/ButtonBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/stylized_shape/Rectangle.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/components/Image/Image.tscn" type="PackedScene" id=3]
[ext_resource path="res://miscellaneous/fonts/dynamic_fonts/H2_headline.tres" type="DynamicFont" id=4]
[ext_resource path="res://miscellaneous/fonts/dynamic_fonts/H4_headline.tres" type="DynamicFont" id=5]
[ext_resource path="res://miscellaneous/fonts/dynamic_fonts/body_1.tres" type="DynamicFont" id=6]
[ext_resource path="res://ui/screens/FlashCardPractice/components/CardButton/CardButton.gd" type="Script" id=7]
[ext_resource path="res://miscellaneous/image/icons/FLIP_BUTTON.png" type="Texture" id=8]
[ext_resource path="res://miscellaneous/image/icons/FLIP_BUTTON_FLIPPED.png" type="Texture" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="Animation" id=9]
resource_name = "CORRECT_ANSWER"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Back/Cover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Back/Cover:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Back/Cover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Back/Cover:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Back/Style/BackgroundBox:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.811765, 0.921569, 0.807843, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/Front/Style/BackgroundBox:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.811765, 0.921569, 0.807843, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "WRONG_ANSWER"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Back/Cover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Back/Cover:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Back/Style/BackgroundBox:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.811765, 0.921569, 0.807843, 1 ), Color( 0.921569, 0.815686, 0.807843, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/Front/Style/BackgroundBox:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.811765, 0.921569, 0.807843, 1 ), Color( 0.921569, 0.815686, 0.807843, 1 ) ]
}

[node name="CardButton" instance=ExtResource( 1 )]
anchor_right = 0.579
anchor_bottom = 0.725
margin_right = -223.995
margin_bottom = -164.0
rect_min_size = Vector2( 524, 464 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 7 )
has_back = false
flip_timer_active = false

[node name="Pivot" parent="." index="0"]
position = Vector2( 262, 232 )

[node name="Front" parent="Pivot" index="0"]
margin_left = -262.0
margin_top = -232.0
margin_right = 262.0
margin_bottom = 232.0

[node name="BackgroundBox" parent="Pivot/Front/Style" index="0" instance=ExtResource( 2 )]
modulate = Color( 0.811765, 0.921569, 0.807843, 1 )
background_color = "SECONDARY"

[node name="MarginContainer" parent="Pivot/Front" index="1"]
custom_constants/margin_right = 32
custom_constants/margin_top = 56
custom_constants/margin_left = 32

[node name="Layout" type="VBoxContainer" parent="Pivot/Front/MarginContainer" index="0"]
margin_left = 32.0
margin_top = 56.0
margin_right = 492.0
margin_bottom = 464.0
custom_constants/separation = 0

[node name="Content" type="HBoxContainer" parent="Pivot/Front/MarginContainer/Layout" index="0"]
margin_right = 460.0
margin_bottom = 348.0
size_flags_vertical = 3
custom_constants/separation = 12

[node name="Title" type="Label" parent="Pivot/Front/MarginContainer/Layout/Content" index="0"]
margin_right = 460.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_fonts/font = ExtResource( 4 )
text = "IMAGINATIONIX"
align = 1
valign = 1
autowrap = true

[node name="Image" parent="Pivot/Front/MarginContainer/Layout/Content" index="1" instance=ExtResource( 3 )]
visible = false
margin_left = 234.0
margin_right = 460.0
margin_bottom = 408.0

[node name="FlipButton" type="Button" parent="Pivot/Front/MarginContainer/Layout" index="1"]
modulate = Color( 0.172549, 0.172549, 0.172549, 0.498039 )
margin_top = 348.0
margin_right = 460.0
margin_bottom = 408.0
rect_min_size = Vector2( 0, 56 )
custom_colors/font_color_disabled = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color_focus = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 8 )
icon_align = 1

[node name="FrontTrigger" parent="Pivot/Front" index="2"]
visible = false

[node name="Back" parent="Pivot" index="1"]
margin_left = -262.0
margin_top = -232.0
margin_right = 262.0
margin_bottom = 232.0

[node name="BackgroundBox" parent="Pivot/Back/Style" index="0" instance=ExtResource( 2 )]
modulate = Color( 0.811765, 0.921569, 0.807843, 1 )
background_color = "SECONDARY"

[node name="MarginContainer" parent="Pivot/Back" index="1"]
custom_constants/margin_right = 32
custom_constants/margin_top = 56
custom_constants/margin_left = 32

[node name="Layout" type="VBoxContainer" parent="Pivot/Back/MarginContainer" index="0"]
margin_left = 32.0
margin_top = 56.0
margin_right = 492.0
margin_bottom = 464.0
custom_constants/separation = 0

[node name="Title" type="Label" parent="Pivot/Back/MarginContainer/Layout" index="0"]
margin_top = 57.0
margin_right = 460.0
margin_bottom = 117.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_fonts/font = ExtResource( 5 )
text = "BIRD"
align = 1
valign = 1
autowrap = true

[node name="ExtraContent" type="HBoxContainer" parent="Pivot/Back/MarginContainer/Layout" index="1"]
margin_top = 174.0
margin_right = 460.0
margin_bottom = 348.0
size_flags_vertical = 3
custom_constants/separation = 12

[node name="Description" type="TextEdit" parent="Pivot/Back/MarginContainer/Layout/ExtraContent" index="0"]
margin_right = 460.0
margin_bottom = 174.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color_readonly = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_styles/completion = SubResource( 8 )
text = "Bird is an animal djfjdjfdjsifjdifjdijfijifjdsifjsdijfidjfidjifjdifjdifjidfjidjfijfijdifjdijfifjdifjdifjidj"
readonly = true
wrap_enabled = true

[node name="Image" parent="Pivot/Back/MarginContainer/Layout/ExtraContent" index="1" instance=ExtResource( 3 )]
visible = false
margin_left = 236.0
margin_right = 460.0
margin_bottom = 320.0

[node name="FlipButton" type="Button" parent="Pivot/Back/MarginContainer/Layout" index="2"]
modulate = Color( 0.172549, 0.172549, 0.172549, 0.498039 )
margin_top = 348.0
margin_right = 460.0
margin_bottom = 408.0
rect_min_size = Vector2( 0, 56 )
custom_colors/font_color_disabled = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color_focus = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 9 )
icon_align = 1

[node name="BackTrigger" parent="Pivot/Back" index="2"]
visible = false

[node name="Cover" type="MarginContainer" parent="Pivot/Back" index="3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 56
custom_constants/margin_left = 32

[node name="BackgroundBox" parent="Pivot/Back/Cover" index="0" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 56.0
margin_right = 492.0
margin_bottom = 464.0

[node name="Layout" type="VBoxContainer" parent="Pivot/Back/Cover" index="1"]
margin_left = 32.0
margin_top = 56.0
margin_right = 492.0
margin_bottom = 464.0
custom_constants/separation = 0

[node name="Content" type="HBoxContainer" parent="Pivot/Back/Cover/Layout" index="0"]
margin_right = 460.0
margin_bottom = 348.0
size_flags_vertical = 3
custom_constants/separation = 12

[node name="Title" type="Label" parent="Pivot/Back/Cover/Layout/Content" index="0"]
margin_right = 460.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_fonts/font = ExtResource( 4 )
text = "COVER"
align = 1
valign = 1
autowrap = true

[node name="Image" parent="Pivot/Back/Cover/Layout/Content" index="1" instance=ExtResource( 3 )]
visible = false
margin_left = 236.0
margin_right = 460.0
margin_bottom = 352.0

[node name="FlipButton" type="Button" parent="Pivot/Back/Cover/Layout" index="1"]
modulate = Color( 0.172549, 0.172549, 0.172549, 0.498039 )
margin_top = 696.0
margin_right = 460.0
margin_bottom = 756.0
rect_min_size = Vector2( 0, 56 )
custom_colors/font_color_disabled = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color_focus = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 9 )
icon_align = 1

[node name="ShowAnswerPlayer" type="AnimationPlayer" parent="." index="4"]
autoplay = "RESET"
anims/CORRECT_ANSWER = SubResource( 9 )
anims/RESET = SubResource( 10 )
anims/WRONG_ANSWER = SubResource( 11 )

[connection signal="resized" from="." to="." method="_on_CardButton_resized"]
